ansible complete commit

--- a/configure_ec2.yaml
+++ b/configure_ec2.yaml
@@ -11,26 +11,10 @@
       package:
         name: postgresql
         state: present
-    # - name: start nginx
-    #   package:
-    #     name: nginx 
-    #     state: latest
-    # - name: nginx start
-    #   service:
-    #     name: nginx
-    #     state: started
-    # - name: install tree
-    #   package:
-    #     name: tree
-    #     state: present
-    - name: ensure nginx is at the latest version
-      package: 
-        name: nginx1
-        state: latest
-    - name: start nginx
-      service:
-          name: nginx1
-          state: started
+    - name: install tree
+      package:
+        name: tree
+        state: present
  
 
 #cannot find host for some reason... tag not working....
