--- a/create_all.yaml
+++ b/create_all.yaml
@@ -3,3 +3,5 @@
 - import_playbook: create_ec2.yaml
 - import_playbook: configure_ec2.yaml
 - import_playbook: create_rds.yaml
+- import_playbook: create_autoscaler.yaml
+- import_playbook: create_loadbalancer.yaml
