--- a/create_vpc.yaml
+++ b/create_vpc.yaml
@@ -4,11 +4,10 @@
   tasks:
     - name: Create VPC
       ec2_vpc_net:
-        name: image-gallery
+        name: image-gallery-1
         cidr_block: 10.10.0.0/16
         tags:
           Module: 5
-        region: "us-west-1"
         state: present
       register: vpc
     - name: debug
@@ -17,18 +16,19 @@
       ec2_vpc_subnet:
         vpc_id: "{{ vpc.vpc.id }}"
         tags:
-          Name: Module5 public
+          Name: Module5 public - 1
           Module: 5
         cidr: 10.10.0.0/24
+        az: "us-west-1a"
         state: present
       register: public_subnet
     - name: create private subnet
       ec2_vpc_subnet:
         vpc_id: "{{ vpc.vpc.id }}"
         tags:
-          Name: Module5 public
+          Name: Module5 private -1
         cidr: 10.10.1.0/24
-        region: "us-west-1"
+        az: "us-west-1b"
         state: present
       register: private_subnet
     - name: create internet gateway
@@ -51,7 +51,7 @@
             gateway_id: "{{ igw.gateway_id }}"
     - name: create security group
       ec2_group:
-        name: M5-dev-final-sg
+        name: M5-dev-final-sg - 2
         description: dev security group
         vpc_id: "{{ vpc.vpc.id }}"
         rules:
